PTP1B sMD update

--- a/examples/example_ptp1b/.defaults/config
+++ b/examples/example_ptp1b/.defaults/config
@@ -25,3 +25,9 @@ states:
 - open
 - closed
 steering:
+  open:
+    input: open_to_closed.dat
+    reference: closed_ref.pdb
+  closed:
+    input: closed_to_open.dat
+    reference: open_ref.pdb
